--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -220,8 +220,9 @@
     font-size: 1.64rem
     line-height: 2.18rem
   .hero
-    padding-top: 7rem
-    height: 70vh
+    padding-top: 8rem
+    padding-bottom: 3rem
+    height: 80%
     &__scroll-down
       display: none
     &__content
